remove grid row size due to spacing issue

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -11,7 +11,6 @@
 @media (min-width: 638px) and (max-width: 945px) {
   .card_grid_wrapper {
     grid-template-columns: repeat(2, minmax(200px, 1fr));
-    grid-template-rows: repeat(2, minmax(200px, 1fr));
   }
 }
 
